getcomponent UCS engine

--- a/packages/engine/samples/02 - htmlUsage/public/index.html
+++ b/packages/engine/samples/02 - htmlUsage/public/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <script src="https://unpkg.com/vue@3.0.2"></script>
-        <script src="@ucsjs/dist/engine.min.js"></script>
+        <script src="@ucsjs/engine/engine.min.js"></script>
 
         <script>
             const { createApp } = Vue
