--- a/src/workspace/pages/todo.page.html
+++ b/src/workspace/pages/todo.page.html
@@ -5,20 +5,21 @@
         <meta charset="utf-8">
     </head>
     <body>
-		<div ref="Text_38" class="boxText_38">
-		    
+		<div ref="Text_48" class="boxText_48">
+		    teste
 		</div>
 		
 		<style>
-		.boxText_38 {
-		    font: Arial, sans-serif;
-		    size: 12px;
-		    color: '';
-		    width: 240px;
+		.boxText_48 {
+		    font-family: Andale Mono, monospace;
+		    font-size: 20px;
+		    color: #000000;
+		    background-color: #E91515;
+		    width: auto;
 		    height: 40px;
-		    position: absolute;
-		    top: 42.5px; 
-		    left: 59.125px;
+		    position: static;
+		    top: 27px; 
+		    left: 23px;
 		    z-index: 1;
 		    transform: scale(1);
 		}
