--- a/src/workspace/pages/todo.page.html
+++ b/src/workspace/pages/todo.page.html
@@ -5,21 +5,21 @@
         <meta charset="utf-8">
     </head>
     <body>
-		<div ref="Text_48" class="boxText_48">
-		    teste
+		<div ref="Text_53" class="boxText_53">
+		    Pietra
 		</div>
 		
 		<style>
-		.boxText_48 {
-		    font-family: Andale Mono, monospace;
-		    font-size: 20px;
+		.boxText_53 {
+		    font-family: Arial, sans-serif;
+		    font-size: 12px;
 		    color: #000000;
-		    background-color: #E91515;
-		    width: auto;
+		    background-color: #C20000;
+		    width: 240px;
 		    height: 40px;
-		    position: static;
-		    top: 27px; 
-		    left: 23px;
+		    position: absolute;
+		    top: 133px; 
+		    left: 49px;
 		    z-index: 1;
 		    transform: scale(1);
 		}
