--- a/src/workspace/pages/todo.page.html
+++ b/src/workspace/pages/todo.page.html
@@ -13,13 +13,13 @@
 		.boxText_53 {
 		    font-family: Arial, sans-serif;
 		    font-size: 12px;
-		    color: #000000;
-		    background-color: #C20000;
+		    color: #FEFEFE;
+		    background-color: #0F0A0A;
 		    width: 240px;
 		    height: 40px;
 		    position: absolute;
-		    top: 133px; 
-		    left: 49px;
+		    top: 42px; 
+		    left: 48px;
 		    z-index: 1;
 		    transform: scale(1);
 		}
