--- a/src/workspace/pages/todo.page.html
+++ b/src/workspace/pages/todo.page.html
@@ -8,23 +8,57 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-		<div ref="Text_53" class="boxText_53">
-		    Pietra
+		<div ref="Text_58" class="boxText_58">
+		    teste
 		</div>
 		
 		<style>
-		.boxText_53 {
+		.boxText_58 {
 		    font-family: Arial, sans-serif;
 		    font-size: 12px;
-		    color: #FEFEFE;
-		    background-color: #0F0A0A;
+		    color: #000000;
+		    background-color: #FFFFFF;
 		    width: 240px;
 		    height: 40px;
 		    position: absolute;
-		    top: 42px; 
-		    left: 48px;
+		    top: 64px; 
+		    left: 83px;
+		    z-index: 0;
+		    transform: scale(1) rotate(0deg);
+		}
+		</style>
+		<div ref="Text_62" class="boxText_62">
+		    
+		</div>
+		
+		<style>
+		.boxText_62 {
+		    font-family: Arial, sans-serif;
+		    font-size: 12px;
+		    color: #000000;
+		    background-color: #FFFFFF;
+		    width: 240px;
+		    height: 40px;
+		    position: absolute;
+		    top: 292px; 
+		    left: 110px;
+		    z-index: 10;
+		    transform: scale(1) rotate(0deg);
+		}
+		</style>
+		<div ref="Box_63" class="boxBox_63">
+		    
+		</div>
+		
+		<style>
+		.boxBox_63 {
+		    width: 240px;
+		    height: 240px;
+		    position: absolute;
+		    top: 260px; 
+		    left: 36px;
 		    z-index: 1;
-		    transform: scale(1);
+		    transform: scale(1) rotate(0deg);
 		}
 		</style>
 
